--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -2,8 +2,8 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark">
     <div class="navbar-nav">
         <a class="nav-item nav-link" routerLink="/">Home</a>
-        <a class="nav-item nav-link" routerLink="/login">Login</a>
-        <a class="nav-item nav-link" routerLink="/register">Register</a>
+        <a class="nav-item nav-link" routerLink="/login">Page 1</a>
+        <a class="nav-item nav-link" routerLink="/register">Page 2</a>
     </div>
 </nav>
 
